fixed overflow scroll

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,14 +36,14 @@ body::-webkit-scrollbar {
 
 body::-webkit-scrollbar-track {
   background: hsl(240, 11%, 89%);
-  /* border-radius: 100vw; */
-  /* margin-block: 0.125em; */
+  border-radius: 100vw;
+  margin-block: 0.125em;
 }
 
 body::-webkit-scrollbar-thumb {
   background: hsl(120, 4%, 56%);
-  /* border: 0.06725em solid hsl(120, 3%, 40%); */
-  /* border-radius: 100vw; */
+  border: 0.06725em solid hsl(120, 3%, 40%);
+  border-radius: 100vw;
 }
 
 body::-webkit-scrollbar-thumb:hover {
